examples/smlfmt-1.2.0/test/fail/dots.sml
val {x, y, ...} = foobar
val {z, ..} = yo
